# GPU_SR1115_symulacja_n_cial

./: .gitignore  CMakeLists.txt  README.md
CPU_BH/: CMakeLists.txt  README.md  barnes_hut_results.csv
CPU_BH/src/: BHTreeNode.cpp  BHTreeNode.h  Body.cpp  Body.h  Octant.cpp  Octant.h  Simulation.cpp  Simulation.h  main.cpp
CPU_BH/tests/: BHTreeNodeTest.cpp  BodyTest.cpp  OctantTest.cpp  SimulationTest.cpp
GPU_2_pair/: CMakeLists.txt  output.json  symulacja_wyniki.xlsx  test_script.py
GPU_2_pair/include/: file_operations.cuh  initialization.cuh  structures.cuh
GPU_2_pair/src/: file_operations.cu  initialization.cu  main.cu
GPU_BH/: .clang-format  CMakeLists.txt  output.json  symulacja_wyniki.xlsx  test_script.py
GPU_BH/include/: BarnesHut.cuh  file_operations.cuh  initialization.cuh
GPU_BH/src/: BarnesHut.cu  file_operations.cu  initialization.cu  main.cu
cpu-proj/: CMakeLists.txt  README.md  result.csv
cpu-proj/src/: main.cpp  physics.cpp  physics.h
cpu-proj/tests/: tests.cpp
include/: initialization.cuh
src/: file_operations.cu  initialization.cu  main.cu
